# twilight

./: .gitignore  .travis.yml  .travis.yml.disabled  CMakeLists.txt  INSTALL.md  README.md
controller/: CMakeLists.txt  GameSocket.cpp  GameSocket.h  main.cpp  standardFunctions.h
python/: ai_nearest_possible.py  ai_objective_path.py  ai_pylight.c  ai_pylight.py  ai_pylight.pyx  buildCython.py  client_api.py  gambling.py  gui.py  launcher.py  main.py  manual_input.py  minmax.py  requirements.txt
python/cython_modules/: README.md  ai_pylight.py  ai_pylight_cython.c  ai_pylight_cython.pyx  benchmark.py  client_api.c  client_api.py  client_api_cython.c  client_api_cython.pyx  client_api_cython_unoptimized.c  client_api_python.py  minmax_cython.c  minmax_cython.pyx  setup.py
server/official/: SecondPlayerDontSplit.xml  VampiresVSWerewolves.exe.config  VampiresVSWerewolvesGameServer.exe.config  betterPathThanNear1.xml  dummier.xml  dummy1.xml  dummy2.xml  humans.xml  leCouloir.xml  moreHumans.xml  symetrie1.xml  testmap.xml
src/: CMakeLists.txt  GameSocket.cpp  GameSocket.h  GameState.cpp  GameState.h  MinMax.cpp  MinMax.h  MoveManager.cpp  MoveManager.h  NetworkManager.h  Node.cpp  Node.h  main.cpp
